k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghidrainsight
  labels:
    name: ghidrainsight
